assets/style/style.css
:root {
  --main-color: #242222;
  --seccond-color:#DCDCDC;
}

body{
  box-sizing: border-box;
  margin:0px;
  font-family: 'Source Sans Pro', sans-serif;
  background-color:var(--main-color);
}

.container{
  overflow-x: hidden;
}

#first_section {
  position: absolute;
  width: 100%;
  height: 100%;
  display:grid;
  grid-template:1fr/3fr 3fr;
}

#first_section>div{
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding-bottom: 60px;
}

#fs_left{
  color:var(--seccond-color);
}

#fs_left p{
  font-size:65px;
  margin:0px;
}

#smaller{
  font-size:26px !important;
  padding-top: 10px;
}

.btn{
  cursor:pointer;
  color:var(--seccond-color);
  font-size:22px;
  padding:10px 45px 10px 45px;
  border:1px solid;
  margin-top:40px;
  background: linear-gradient(to left, var(--main-color) 50%, var(--seccond-color) 50%) right;
  background-size: 200%;
  transition: .6s ease;
}

.btn:hover{
  background-position: left;
  color:var(--main-color);
}

#fs_right{
  margin-left: 220px;
  font-size:30px;
}

#fs_right>div{
  height:110px;
  margin-top: 30px;
}

.logo_img img{
  text-align: center;
  height: 100%;
}

.logo_img{
  position: relative;
  margin-left:60px;
  width:110px;
  cursor:pointer;
  z-index:2;
  transition: all .3s;
}


.logo_img:hover{
  box-shadow:5px 5px 10px 2px rgba(0,0,0,0.51);
  transform: scale(1.05);
}

.logo_img:hover .logo_text p{
  transform: translateX(-70px);
  opacity: 1;
}

.logo_text{
  text-align: right;
  position: absolute;
  top:0;
  right:100px;
}

.logo_text p{
  transition: .6s ease;
  opacity:0;
  text-shadow: 5px 5px 5px rgba(0,0,0,0.5);
}

#navParent{
  position:absolute;
  height:100%;
  width:100%;
  overflow: hidden;
}

#nav{
  height:50px;
  width: 450px;
  transform: rotate(60deg) translateX(-50%) translateY(-50%);
  transform-origin: 0% 0%;
  position: absolute;
  left: 54%;
  top: 50%;
  display: flex;
  justify-content: center;
  padding-right:70px;
  z-index:2;
}

#nav a{
  color:var(--main-color);
  font-size:30px;
  text-decoration: none;
  transition: .6s ease;
}

#nav ul{
  margin:0px;
}

#nav ul li{
  padding:5px 25px;

  float:left;
  list-style: none;
  background: linear-gradient(to top, var(--main-color) 50%, transparent 50%);
  background-size:100% 200%;
  transition: .6s ease;
}

#nav li:hover{
  background-position: bottom;
  color:var(--seccond-color);
}

#nav li:hover a{
  color:var(--seccond-color);
}

#bg_div1 {
  z-index: 0;
  position:absolute;
  width:100%;
  height:100%;
  background: linear-gradient(60deg, var(--main-color) 52%, transparent 52.1%);

}

#bg_div2 {
  z-index: -1;
  position:absolute;
  width:100%;
  height:100%;
  background: linear-gradient(60deg, transparent 51%, var(--seccond-color)  51%);
  
}

#about_section{
  display:none;
  z-index:-2;
  position: absolute;
  width:100%;
  height:100%;
  grid-template: 1fr/1fr 1fr;
  background-size: cover;
  background-position: center;

}

#about_section>div{
 font-size:25px;
}

#about_left{
  color:var(--main-color);
  padding-left: 120px;
  background-color: var(--seccond-color);
}

#about_right{
  color:var(--seccond-color);
  text-align: center;
  background-color: var(--main-color);
  box-shadow: -6px 0px 2px 0px rgba(0,0,0,0.7);
}

.title_div h2{
  font-size: 45px;
  font-weight: bolder;
  text-align: center;
  margin-top:60px;
}

#about_left h2{
  margin-right: 120px;
  margin-bottom: 55px;
}

#about_left h4{
  font-size:32px;
  font-weight: 800;
  margin-bottom: 0px;
  margin-top:10px;
  font-weight: 500;
}

#about_left ul {
  list-style: none;
  padding-left:0px;
  opacity:0.8;
}

#about_right_text{
  text-align: left;
  margin-top:55px;
  padding-right:50px;
  padding-left:80px;
  line-height: 1.4;
}

#about_right img{
  margin-top:20px;
  width:160px;
}

.menu{
  position: absolute;
  left:15px;
  top:15px;
  text-align: center;
  padding:10px 20px;
  font-size:23px;
 
}
.menu ul{
  list-style: none;
  margin:0; 
}
.menu ul li{
  float:left;
  padding:0px 7px;
  margin:0 15px;
  border: 1px solid var(--main-color);
  background: linear-gradient(to bottom, var(--main-color) 50%, transparent 50%);
  background-size:100% 200%;
  background-position: bottom;
  transition: .7s ease;
}

.menu ul li a{
  text-decoration: none;
  color:var(--main-color);
}

.menu ul li:hover {
  background-position: top;
}
.menu ul li:hover a{
  color:var(--seccond-color);
}

.lightMenu{
  left:0;
  top:25px;
}

.lightMenu ul li{
  border: 1px solid var(--seccond-color);
  background: linear-gradient(to bottom, var(--seccond-color) 50%, transparent 50%);
  background-size:100% 200%;
  background-position: bottom;
}
.lightMenu ul li a{
  color:var(--seccond-color);
}

.lightMenu ul li:hover {
  background-position: top;
}
.lightMenu li:hover a{
  color:var(--main-color) !important;
}

#work_section{
  display:none;
  z-index:-2;
  position: absolute;
  width:100%;
  background-color:var(--main-color);
  color:var(--seccond-color);
  box-sizing: border-box;
}

#work_section h2{
  text-align: center;
  font-size:32px;
}

#projects_container{
  display: grid;
  grid-template: 1fr 1fr/1fr 1fr 1fr;
  grid-column-gap: 50px;
  grid-row-gap: 30px;
  padding:0 60px;
}

 .project{
  position: relative;
  cursor: pointer;
 }

 .project a,a:visited{
   color: var(--seccond-color);
 }

 .project:hover img{
   opacity:1;
 }

 .project:hover .pro_text{
  opacity: 0.8;
}

.project:hover .pro_text p{
  opacity: 1;
  font-size: 17px;
}

 .pro_img img{
  transition:0.6s ease;
  opacity:0.67;
  width: 100%;
 }

 .pro_text{
  transition: 0.7s cubic-bezier(.65,.05,.36,1);
  position: absolute;
  top:50%;
  left:50%;
  transform: translate(-50%,-50%);
  text-align: center;
  width: 100%;
  background-color: var(--main-color);
  opacity:0;
  height:80px;
  display: flex;
  justify-content: center;
  align-items: center;
 }

 .pro_text p{
  margin: 3px;
   opacity: 0;
   font-size: 0 ;
   transition: 0.5s linear;
 }
/* ... */

